SFD-4390 Add logging to location processing (#260)